changed component styling

--- a/entare-project-website/src/components/Solution.css
+++ b/entare-project-website/src/components/Solution.css
@@ -20,7 +20,7 @@
     margin-left: 87px;    
 }
 .container-two{
-    border: 1px solid #F5F5F5;
+    border: 1px solid white;
     height: 92vh;
     margin-top: -97px;
     background-color:  #F5F5F5;   
