--- a/entare-website/src/components/TechnologiesUsed.css
+++ b/entare-website/src/components/TechnologiesUsed.css
@@ -56,7 +56,10 @@
     margin-top: 3%;
     color: black;
 }
-
+.computer-vision{
+    margin-bottom: -41px;
+    margin-top: -11px;
+}
 .computer-vision h1{
     font-size: 47px;
     margin-top: -71px;
@@ -68,7 +71,7 @@
 
 .computer-vision .one{
     margin-top: 3%;
-    margin-bottom: 6%;  
+    margin-bottom: 9%;  
     margin-left: 16%;
     color:white;
     border:solid 1px yellow ;
@@ -82,20 +85,32 @@
     margin-left: 9%;
     font-size: 21px;
 }
+.cv{
+    margin-bottom: 81px;
+}
 .line-1{
-    border-left: 2px solid black;
-    height: 272px;
-    margin-left: 39%;
-    margin-top: -22.5%;
+    border-left: 1px solid black;
+    height: 299px;
+    margin-left: 35%;
+    margin-top:-28.5%;
 }
 .python{
-    margin-top: 1%;
-    margin-right: -3%;
-
+    margin-top: -1%; 
 }
+/* .python{
+    margin-top: 1%;
+    margin-right: -2%; */
+.tech{
+    margin-top: 81px;
+}
+.techs{
+    margin-top: 81px;
+    padding-left: 29px;
+}
+
 .python .two{
     margin-left: 45%;
-    margin-top: -24%;
+    margin-top: -28%;
     margin-bottom: 62%;
     color:white;
     border:solid 1px yellow ;
@@ -109,8 +124,6 @@
     color: black;
     margin-top: -61%;
     margin-left: 45%;
-  
-  
 }
 
 .python p{
@@ -119,15 +132,18 @@
     font-size: 21px;
 }
 .line-3{
-    border-left: 2px solid black;
-    height: 273px;
-    margin-left: 69%;
-    margin-top: -25%;
+    border-left: 1px solid black;
+    height: 311px;
+    margin-left: 65%;
+    margin-top: -32%;
+   
+}
+.deep{
+    margin-top: 22px;
 }
 .cloud{
     margin-top: -1%;
     margin-right: -84px;
-
 }
 .cloud h1{
 font-size: 46px;
@@ -173,17 +189,38 @@ h3{
 }
 .image-one{
     margin-top: -3%;  
-    margin-left: 1%;
+    margin-left: 3%;
+    width: 27%;
+    height: 77%;
+}
+.plus{
+    margin-top: -15%;
+    margin-bottom: 12%;
+    padding-left:23px ;
+    color: #E8733A;
+}
+.arrow{
+    margin-top: -15%;
+    margin-bottom: 12%;
+    margin-left:-3% ;   
+    color: #E8733A;
+ 
+
 }
 .image-two{
+   
     margin-top:-19% ;
-    margin-left: 5%;
-    margin-right: 7%;
+    margin-left: 1%;
+    margin-right: 4%;
+    width: 27%;
+    height: 77%;
 }
 .image-three{
     margin-top: -4%;
-    margin-left: -1%;
-    width: 28%;
+    margin-left: 1%;
+ 
+    width: 27%;
+    height: 77%;
 }
 
 .one{
@@ -264,7 +301,7 @@ h3{
     font-weight:bold;
     color: #442505;
     font-size: 32px;
-    margin-top: 99px;
+    margin-top: 67px;
     margin-left: 222px;
 }
 .icon-three p{
