--- a/entare-website/src/components/LandingPage.css
+++ b/entare-website/src/components/LandingPage.css
@@ -12,20 +12,22 @@ body{
  }
  
  
- nav{
+ nav ul Link{
      color:black;
+     text-decoration: none; 
    
    }
-   nav ul li{
+ 
+  nav ul li {
       list-style: none;
-     
       float:right;
       margin: 2%;
       margin-top: 0.5%;
       font-size: 23px;
       color: white;
+   
    }
- 
+
    .logo{
      width:8%;
      height: 20vh;
