--- a/entare-website/src/components/LandingPage.css
+++ b/entare-website/src/components/LandingPage.css
@@ -6,47 +6,72 @@ body{
     padding: auto;
     overflow-x: hidden; 
     background-image: url('images/lionz.jpeg'); 
-   background-repeat: no-repeat;
-   background-size: cover;
-   height: 150vh;   
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 150vh;   
  }
  
- 
- nav ul Link{
-     color:black;
-     text-decoration: none; 
-   
-   }
+ nav{
+  margin-left: 472px; 
+
+ }
  
   nav ul li {
       list-style: none;
       float:right;
-      margin: 2%;
-      margin-top: 0.5%;
+      margin-left: 3%;  
+      margin-right: -6%;
+      margin-top: 4.5%;   
       font-size: 23px;
       color: white;
-   
+      padding-right:42px ;
+  
+   }
+   nav ul{
+    position:fixed;
+    margin-left: 12%; 
+  
+
+   }
+   nav ul li a{
+    color: white;
+    text-decoration: none;
+
+ 
    }
 
+   nav ul li a::after{
+    content: '';
+    width: 0%;
+    height: 2px;
+    display: block;   
+    /* margin:auto; */
+    margin-top: 3px;
+    transition:0.5s;
+    background:  #E8733A;
+  
+    }
+   nav a:hover::after{
+    /* color:  #E8733A; */
+    width: 100%;
+  
+   }
    .logo{
      width:8%;
      height: 20vh;
      margin-left: 1.5%;
-     margin-top: -2%;
+     margin-top:-0.5%;
    }
-   /* .leo{
-     margin-top: -81px;   
-     width: 100%;
-   } */
+ 
  .line{
      border-left: 2px solid white;
-     height: 82px;
+     height: 81px;
      margin-left: 8%;
      margin-top: -9%;
      margin-bottom: 5%;
  }
  h1{
-     margin-left: 11%;
+     margin-left: 14%;
      margin-top: -6%;
      font-size: larger;
      color: white;
@@ -66,9 +91,9 @@ body{
     font-size: 46px;
 }
 .horiz{
-    border-left: 2px solid #E8733A;
+    border-left: 1px solid #ffff;
     height: 79px;
-    margin-left: 9%;
+    margin-left: 11%;
     margin-top: -5%;
     width: 44%;
 }
