--- a/entare-project-website/src/App.css
+++ b/entare-project-website/src/App.css
@@ -1,9 +1,11 @@
-<<<<<<< HEAD
+
 .App {
   text-align: center;
 }
 body{
   background-color: #FEF1EB;
+  font-family: "Bellefair";
+
 }
 .App-logo {
   height: 40vmin;
@@ -38,13 +40,6 @@ body{
   to {
     transform: rotate(360deg);
   }
-=======
-@import url('https://fonts.googleapis.com/css2?family=Bellefair&family=Cabin+Condensed&display=swap');
-*{
-    padding: 0;
-    margin: 0;
-    font-family: 'Bellefair', serif;
->>>>>>> bec9807b04c31dd9f3b4bde262d0cdf3bf0b7ef8
 }
 .picture{
    background-color: #FFF1EB;
